project2/.antlr/myparserParser.java
// Generated from d:\B ½sÄ¶¾¹³]­p\project\project2\myparser.g4 by ANTLR 4.9.2

    // import packages here.

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class myparserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, FLOAT=30, INT=31, CHAR=32, 
		MAIN=33, VOID=34, IF=35, ELSE=36, DO=37, WHILE=38, FOR=39, PRINTF=40, 
		RETURN=41, SWITCH=42, CASE=43, DEFAULT=44, BREAK=45, CONTINUE=46, INCLUDE=47, 
		CONST=48, STD_LIB=49, CHARACTER=50, Identifier=51, Integer_constant=52, 
		Floating_point_constant=53, STRING=54, WS=55, COMMENT=56;
	public static final int
		RULE_headers = 0, RULE_function = 1, RULE_program = 2, RULE_declarations = 3, 
		RULE_type = 4, RULE_statements = 5, RULE_arith_expression = 6, RULE_comp = 7, 
		RULE_addExpr = 8, RULE_multExpr = 9, RULE_signExpr = 10, RULE_primaryExpr = 11, 
		RULE_statement = 12, RULE_variable = 13, RULE_assign_statement = 14, RULE_if_then_statements = 15, 
		RULE_else_statements = 16, RULE_switch_statements = 17, RULE_switch_statement = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"headers", "function", "program", "declarations", "type", "statements", 
			"arith_expression", "comp", "addExpr", "multExpr", "signExpr", "primaryExpr", 
			"statement", "variable", "assign_statement", "if_then_statements", "else_statements", 
			"switch_statements", "switch_statement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#'", "'('", "','", "')'", "'{'", "'}'", "'['", "']'", "';'", 
			"'>'", "'<'", "'=='", "'!='", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'++'", "'--'", 
			"':'", "'float'", "'int'", "'char'", "'main'", "'void'", "'if'", "'else'", 
			"'do'", "'while'", "'for'", "'printf'", "'return'", "'switch'", "'case'", 
			"'default'", "'break'", "'continue'", "'include'", "'const'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "FLOAT", "INT", "CHAR", "MAIN", "VOID", 
			"IF", "ELSE", "DO", "WHILE", "FOR", "PRINTF", "RETURN", "SWITCH", "CASE", 
			"DEFAULT", "BREAK", "CONTINUE", "INCLUDE", "CONST", "STD_LIB", "CHARACTER", 
			"Identifier", "Integer_constant", "Floating_point_constant", "STRING", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "myparser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    boolean TRACEON = true;

	public myparserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class HeadersContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(myparserParser.INCLUDE, 0); }
		public TerminalNode STD_LIB() { return getToken(myparserParser.STD_LIB, 0); }
		public HeadersContext headers() {
			return getRuleContext(HeadersContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public HeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headers; }
	}

	public final HeadersContext headers() throws RecognitionException {
		HeadersContext _localctx = new HeadersContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_headers);
		try {
			int _alt;
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(T__0);
				setState(39);
				match(INCLUDE);
				setState(40);
				match(STD_LIB);
				setState(41);
				headers();
				if (TRACEON) System.out.println("headers: INCLUDE STD_LIB headers");
				}
				break;
			case FLOAT:
			case INT:
			case CHAR:
			case VOID:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(44);
						function();
						}
						} 
					}
					setState(49);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(50);
				program();
				if (TRACEON) System.out.println("headers: program");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(myparserParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(myparserParser.Identifier, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public If_then_statementsContext if_then_statements() {
			return getRuleContext(If_then_statementsContext.class,0);
		}
		public TerminalNode VOID() { return getToken(myparserParser.VOID, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VOID:
				{
				setState(55);
				match(VOID);
				}
				break;
			case FLOAT:
			case INT:
			case CHAR:
				{
				setState(56);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(59);
			match(Identifier);
			setState(60);
			match(T__1);
			setState(61);
			type();
			setState(62);
			match(Identifier);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(63);
				match(T__2);
				setState(64);
				type();
				setState(65);
				match(Identifier);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(T__3);
			setState(73);
			if_then_statements();
			if (TRACEON) System.out.println("function: (VOID|type) Identifier ( type Identifier (, type Identifier)*) if_then_statements}");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(myparserParser.VOID, 0); }
		public TerminalNode MAIN() { return getToken(myparserParser.MAIN, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(VOID);
			setState(77);
			match(MAIN);
			setState(78);
			match(T__1);
			setState(79);
			match(T__3);
			setState(80);
			match(T__4);
			setState(81);
			declarations();
			setState(82);
			statements();
			setState(83);
			match(T__5);
			if (TRACEON) System.out.println("program: VOID MAIN () {declarations statements}");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(myparserParser.Identifier, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public TerminalNode CONST() { return getToken(myparserParser.CONST, 0); }
		public TerminalNode Integer_constant() { return getToken(myparserParser.Integer_constant, 0); }
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarations);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FLOAT:
			case INT:
			case CHAR:
			case CONST:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==CONST) {
					{
					setState(86);
					match(CONST);
					}
				}

				setState(89);
				type();
				setState(90);
				match(Identifier);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(91);
					match(T__6);
					setState(92);
					match(Integer_constant);
					setState(93);
					match(T__7);
					}
				}

				setState(96);
				match(T__8);
				setState(97);
				declarations();
				 if (TRACEON) System.out.println("declarations: type Identifier ; declarations ('[' Integer_constant ']')?"); 
				}
				break;
			case T__5:
			case IF:
			case DO:
			case WHILE:
			case FOR:
			case PRINTF:
			case RETURN:
			case SWITCH:
			case BREAK:
			case CONTINUE:
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				 if (TRACEON) System.out.println("declarations: ");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(myparserParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(myparserParser.FLOAT, 0); }
		public TerminalNode CHAR() { return getToken(myparserParser.CHAR, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(INT);
				 if (TRACEON) System.out.println("type: INT"); 
				}
				break;
			case FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				match(FLOAT);
				if (TRACEON) System.out.println("type: FLOAT"); 
				}
				break;
			case CHAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				match(CHAR);
				if (TRACEON) System.out.println("type: CHAR"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_statements);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case DO:
			case WHILE:
			case FOR:
			case PRINTF:
			case RETURN:
			case SWITCH:
			case BREAK:
			case CONTINUE:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				statement();
				setState(112);
				statements();
				if (TRACEON) System.out.println("statements: statement statements");
				}
				break;
			case T__5:
			case CASE:
			case DEFAULT:
				enterOuterAlt(_localctx, 2);
				{
				if (TRACEON) System.out.println("statements: ");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arith_expressionContext extends ParserRuleContext {
		public List<AddExprContext> addExpr() {
			return getRuleContexts(AddExprContext.class);
		}
		public AddExprContext addExpr(int i) {
			return getRuleContext(AddExprContext.class,i);
		}
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public Arith_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arith_expression; }
	}

	public final Arith_expressionContext arith_expression() throws RecognitionException {
		Arith_expressionContext _localctx = new Arith_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arith_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			addExpr();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14))) != 0)) {
				{
				setState(119);
				comp();
				setState(120);
				addExpr();
				}
			}

			if (TRACEON) System.out.println("arith_expression: addExpr comp addExpr");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comp);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__9);
				if (TRACEON) System.out.println("comp: >");
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(T__10);
				if (TRACEON) System.out.println("comp: <");
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				match(T__11);
				if (TRACEON) System.out.println("comp: ==");
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(132);
				match(T__12);
				if (TRACEON) System.out.println("comp: !=");
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				match(T__13);
				if (TRACEON) System.out.println("comp: <=");
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				match(T__14);
				if (TRACEON) System.out.println("comp: >=");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddExprContext extends ParserRuleContext {
		public List<MultExprContext> multExpr() {
			return getRuleContexts(MultExprContext.class);
		}
		public MultExprContext multExpr(int i) {
			return getRuleContext(MultExprContext.class,i);
		}
		public AddExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addExpr; }
	}

	public final AddExprContext addExpr() throws RecognitionException {
		AddExprContext _localctx = new AddExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_addExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			multExpr();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__15 || _la==T__16) {
				{
				setState(145);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__15:
					{
					setState(141);
					match(T__15);
					setState(142);
					multExpr();
					}
					break;
				case T__16:
					{
					setState(143);
					match(T__16);
					setState(144);
					multExpr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			if (TRACEON) System.out.println("addExpr: multExpr( '+' multExpr| '-' multExpr)*");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultExprContext extends ParserRuleContext {
		public List<SignExprContext> signExpr() {
			return getRuleContexts(SignExprContext.class);
		}
		public SignExprContext signExpr(int i) {
			return getRuleContext(SignExprContext.class,i);
		}
		public MultExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multExpr; }
	}

	public final MultExprContext multExpr() throws RecognitionException {
		MultExprContext _localctx = new MultExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			signExpr();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__18) | (1L << T__19))) != 0)) {
				{
				setState(159);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__17:
					{
					setState(153);
					match(T__17);
					setState(154);
					signExpr();
					}
					break;
				case T__18:
					{
					setState(155);
					match(T__18);
					setState(156);
					signExpr();
					}
					break;
				case T__19:
					{
					setState(157);
					match(T__19);
					setState(158);
					signExpr();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			if (TRACEON) System.out.println("multExpr: signExpr( '*' signExpr| '/' signExpr)*");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignExprContext extends ParserRuleContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public SignExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signExpr; }
	}

	public final SignExprContext signExpr() throws RecognitionException {
		SignExprContext _localctx = new SignExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_signExpr);
		try {
			setState(173);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case CHARACTER:
			case Identifier:
			case Integer_constant:
			case Floating_point_constant:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				primaryExpr();
				if(TRACEON) System.out.println("signExpr: primaryExpr");
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(T__16);
				setState(170);
				primaryExpr();
				if(TRACEON) System.out.println("signExpr: -primaryExpr");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExprContext extends ParserRuleContext {
		public TerminalNode Integer_constant() { return getToken(myparserParser.Integer_constant, 0); }
		public TerminalNode Floating_point_constant() { return getToken(myparserParser.Floating_point_constant, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode CHARACTER() { return getToken(myparserParser.CHARACTER, 0); }
		public TerminalNode STRING() { return getToken(myparserParser.STRING, 0); }
		public Arith_expressionContext arith_expression() {
			return getRuleContext(Arith_expressionContext.class,0);
		}
		public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpr; }
	}

	public final PrimaryExprContext primaryExpr() throws RecognitionException {
		PrimaryExprContext _localctx = new PrimaryExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_primaryExpr);
		try {
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Integer_constant:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(Integer_constant);
				if(TRACEON) System.out.println("primaryExpr: Integer_constant");
				}
				break;
			case Floating_point_constant:
				enterOuterAlt(_localctx, 2);
				{
				setState(177);
				match(Floating_point_constant);
				if(TRACEON) System.out.println("primaryExpr: Floating_point_constant");
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(179);
				variable();
				if(TRACEON) System.out.println("primaryExpr: variable");
				}
				break;
			case CHARACTER:
				enterOuterAlt(_localctx, 4);
				{
				setState(182);
				match(CHARACTER);
				if(TRACEON) System.out.println("primaryExpr: CHARACTER");
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 5);
				{
				setState(184);
				match(STRING);
				if(TRACEON)System.out.println("primaryExpr: STRING");
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 6);
				{
				setState(186);
				match(T__1);
				setState(187);
				arith_expression();
				setState(188);
				match(T__3);
				if(TRACEON) System.out.println("primaryExpr: (arith_expression)");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public Assign_statementContext assign_statement() {
			return getRuleContext(Assign_statementContext.class,0);
		}
		public TerminalNode IF() { return getToken(myparserParser.IF, 0); }
		public List<Arith_expressionContext> arith_expression() {
			return getRuleContexts(Arith_expressionContext.class);
		}
		public Arith_expressionContext arith_expression(int i) {
			return getRuleContext(Arith_expressionContext.class,i);
		}
